hello-world-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-ingress
  namespace: prod
  annotations:
    kubernetes.io/tls-acme: 'true'
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: helloworld.howinator.io
    http:
      paths:
      - path: /
        backend:
          serviceName: coffee-svc
          servicePort: 80
  tls:
  - hosts:
    - helloworld.howinator.io
    secretName: tls-helloworld.howinator.io
